Fix spacing in css

--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 html {
-  font-family: 'Crimson Text', serif;
+  font-family: "Crimson Text", serif;
   color: #403328;
 }
 
